[package]
name = "pico_w_blink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-embedded-hal = {version = "0.1.0",features = ["defmt"]}
embassy-sync = {version = "0.5.0"}
embassy-executor = {version = "0.5.0",features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"]}
embassy-time = {version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"]}
embassy-rp = {version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-usb = {version = "0.1.0", features = ["defmt"] }
embassy-net = {version = "0.4.0",features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-net-wiznet = {version = "0.1.0",features = ["defmt"] }
embassy-futures = "0.1.1"


cyw43 = {version = "0.1.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = {version = "0.1.0",features = ["defmt", "overclock"]}

defmt = "0.3.5"
defmt-rtt = "0.4.0"
fixed = "1.24.0"
fixed-macro = "1.2.0"



cortex-m = {version = "0.7.7",features = ["inline-asm"] }
cortex-m-rt ="0.7.3"
panic-probe = {version = "0.3.1", features = ["print-defmt"]}
embedded-hal = "1.0.0"


static_cell = "2.0.0"
portable-atomic = { version = "1.5", features = ["critical-section"] }
